<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cff6c8"
    tools:context=".ActivityListView">

    <Button
        android:id="@+id/btn_atras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#4cad4c"
        android:text="@string/btnAtras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtbuscar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="#69cd68"
        android:ems="10"
        android:hint="@string/txtBuscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_atras" />

    <ListView
        android:id="@+id/txtlista"
        android:layout_width="397dp"
        android:layout_height="393dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="#8ae287"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtbuscar" />

    <Button
        android:id="@+id/btn_compartir"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="140dp"
        android:backgroundTint="#4cad4c"
        android:text="@string/btnCompartir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtlista" />

    <Button
        android:id="@+id/btn_ver"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="140dp"
        android:backgroundTint="#4cad4c"
        android:text="@string/btnVer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_compartir"
        app:layout_constraintTop_toBottomOf="@+id/txtlista" />

    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#4cad4c"
        android:text="@string/btnEliminar"
        app:layout_constraintBottom_toTopOf="@+id/btn_llamar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_compartir" />

    <Button
        android:id="@+id/btn_actualizar"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#4cad4c"
        android:text="@string/btnActualizar"
        app:layout_constraintBottom_toTopOf="@+id/btn_llamar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_eliminar"
        app:layout_constraintTop_toBottomOf="@+id/btn_ver" />

    <Button
        android:id="@+id/btn_llamar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#4cad4c"
        android:text="@string/btnLlamar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>